// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render a Toggle 1`] = `
<div
  className="tc-toggle switch checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      id="id"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
  </label>
</div>
`;

exports[`Toggle should render a Toggle with label 1`] = `
<div
  className="tc-toggle switch checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      id="id"
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      some label
    </span>
  </label>
</div>
`;

exports[`Toggle should render a checked Toggle 1`] = `
<div
  className="tc-toggle switch checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      checked={true}
      id="id"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
  </label>
</div>
`;

exports[`Toggle should render a disabled Toggle 1`] = `
<div
  className="tc-toggle switch checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      disabled={true}
      id="id"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
  </label>
</div>
`;
